[package]
name = "dircnt"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-utilities"]
description = "Count directory entries faster than `ls -f | wc -l`"
documentation = "https://docs.rs/dircnt"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dircnt"
